<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".SegundaActividad">

    <Button
        android:id="@+id/btnSegundaReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/reiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="8dp"
        android:text="@string/SeleccioneUnaMoneda"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/rgpSegundaMoneda"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSegundaResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/resultado"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/btnSegundaConvertir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSegundaConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="32dp"
        android:text="@string/convertir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSegundaReiniciar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cartelConversor"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtSegundaMonto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtSegundaMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/monto"
        android:inputType="textPersonName|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="128dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/billeteradigital" />

    <RadioGroup
        android:id="@+id/rgpSegundaMoneda"
        android:layout_width="237dp"
        android:layout_height="163dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edtSegundaResultado"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbtSegundaReal"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/pink"
            android:text="@string/Real"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edtSegundaResultado"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/rbtSegundoDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="4dp"
            android:buttonTint="@color/pink"
            android:text="@string/Dolar"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rbtSegundaEuro"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/rbtSegundaEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="4dp"
            android:buttonTint="@color/pink"
            android:text="@string/Euro"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rbtSegundaReal"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>